--- a/css/styles.css
+++ b/css/styles.css
@@ -779,7 +779,8 @@ ul {
     grid-template-areas:    '. pro-pitch .'
                             'percs percs percs'  
                             'ext ext ext'      
-                            'card card card';
+                            'card card card'
+                            'counter counter counter';
     grid-template-columns: minmax(1rem, .7fr) 4fr minmax(1rem, .7fr);
 }
 
@@ -808,6 +809,12 @@ ul {
 
     .main-container, .timeline-container {
         margin-block-start: 0 !important;
+    }
+}
+
+@media screen and (max-width:991px) {
+    .main-section {
+        margin-inline: 1rem;
     }
 }
 
@@ -974,10 +981,11 @@ ul {
 
 /* ---- Start of percs ---- */
 .percs-container {
-    padding-block: 4rem 1rem;
+    padding-block: 4rem;
     grid-area: percs;
     display: grid;
     gap: 2rem;
+    width: 100%;
     grid-template-areas: '. percs-content percs-ft .';
     grid-template-columns: minmax(1rem, .7fr) 2fr 2fr minmax(1rem, .7fr);
 }
@@ -1040,10 +1048,11 @@ ul {
 
 /* ---- Start of extension ---- */
 .ext-container {
-    padding-block: 2rem 4rem;
+    padding-block: 4rem;
     grid-area: ext;
     display: grid;
     gap: 2rem;
+    width: 100%;
     grid-template-areas: '. ext-ft ext-content .';
     grid-template-columns: minmax(1rem, .7fr) 2fr 2fr minmax(1rem, .7fr);
 }
@@ -1095,7 +1104,6 @@ ul {
     }*/
     .ext-container {
         display: flex;
-
     }
 
     .ext-ft h1, .percs-ft h1 {
@@ -1115,36 +1123,112 @@ ul {
 
 /* ---- Start of cards ---- */
 
+.card-init {
+    padding-block: 4rem;
+    grid-area: card;
+    display: grid;
+    gap: 2rem;
+    width: 100%;
+    grid-template-areas: '. card-ft card-content .';
+    grid-template-columns: minmax(1rem, .7fr) 2fr 2fr minmax(1rem, .7fr);
+}
 
-@media screen and (max-width: 991px) {
+.card-content {
+    grid-area: card-content;
+}
+
+.card-ft {
+    grid-area: card-ft;
+}
+
+.card-init .card-content h1 {
+    color: var(--color-1);
+    font-size: 3rem;
+    margin-block: 0.5rem;
+}
+
+.card-content .line-fix {
+    margin: 0;
+}
+
+.card-content .line-fix:last-of-type {
+    margin-block-end: 1em;
+}
+
+@media screen and (max-width:1200px) {
     .card-init {
-        box-shadow: none !important;
+        grid-template-areas: 'card-ft card-content';
+        grid-template-columns: 0.5fr 0.5fr;
     }
 }
 
-.card-init {
-    /* background: var(--background-card-container); */
-    border-radius: 2rem;
-    grid-area: card;
-    display: grid;
-}
+@media screen and (max-width:991px) {
+    .card-init {
+        display: flex;
+    }
 
-.card-init h1 {
-    color: var(--color-1);
-}
+    .card-init .card-content h1 {
+        font-size: 2rem;
+    }
 
-.line-fix {
-    margin: 0;
-    line-height: 1.5em;
-    word-spacing: .1em;
-}
-
-.line-fix:last-of-type {
-    margin-block-end: 1em;
+    .card-ft {
+        visibility:hidden;
+        display: none;
+        width: 0 !important;
+        height: 0 !important;
+    }
 }
 
 
 /* ---- End of cards ---- */
+
+/* ---- Start of counters ---- */
+
+.counters {
+    grid-area: counter;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-block: 4rem;
+}
+
+.counters-object {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.counters-object p {
+    margin: 0;
+}
+
+.counters-object p:first-of-type {
+    font-size: 4rem;
+    color: var(--color-1);
+    font-weight: 500;
+}
+
+.counters-object p span {
+    font-weight: 300;
+    color: var(--color-1-2);
+}
+
+@media screen and (max-width:991px) {
+    .counters {
+        padding: 0;
+    }
+}
+
+@media screen and (max-width:720px) {
+    .counters {
+        flex-direction: column;
+        gap: 4rem;
+    }
+}
+
+/* ---- End of counters ---- */
 
 /* ---- Start of footer ---- */
 footer {
@@ -1177,7 +1261,7 @@ footer {
 
 @media screen and (max-width: 991px) {
     footer {
-        grid-template-columns: 1fr 20fr 1fr;
+        grid-template-columns: 1rem 20fr 1rem;
         gap: 0;
     }
 
@@ -1415,8 +1499,13 @@ footer {
     border: none;
 }
 
+.speckle {
+    display: none;
+}
+
 @media screen and (min-width: 992px) {
     .speckle {
+        display:block;
         z-index: -100;
         position: absolute;
         background: hsl(0, 0%, 97%);
@@ -1531,7 +1620,7 @@ footer {
         grid-template-areas:    'p-nav'
                                 'p-mid';
         grid-template-columns: 1fr;
-        margin-inline: 2rem;
+        margin-inline: 1rem;
         gap: 0 !important;
     }
 
@@ -1782,7 +1871,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
                                 'mach-mid';                      
         grid-template-columns: 1fr;
         gap: 1rem;
-        margin-inline: 2rem;
+        margin-inline: 1rem;
     }
 
     .machine-side-wrapper {
@@ -1977,13 +2066,23 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     visibility: hidden;
 }
 
-@media screen and (max-width:991px) {
+@media screen and (max-width:1200px) {
     .about-section {
         grid-template-areas:    'm-mid' 
                                 'timeline';
         grid-template-columns:  1fr;
         gap: 0;
         margin-inline: 2rem;
+    }
+}
+
+@media screen and (max-width:991px) {
+    .about-section {
+        grid-template-areas:    'm-mid' 
+                                'timeline';
+        grid-template-columns:  1fr;
+        gap: 0;
+        margin-inline: 1rem;
     }
 
     .td-container {
@@ -2008,19 +2107,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
         grid-template-areas:    'kval-pol'
                                 'env-pol';
         grid-template-columns:  1fr;
-        padding-inline: 2rem;
-    }
-
-
-}
-
-@media screen and (max-width:1200px) {
-    .about-section {
-        grid-template-areas:    'm-mid' 
-                                'timeline';
-        grid-template-columns:  1fr;
-        gap: 0;
-        margin-inline: 2rem;
+        margin-inline: 1rem;
     }
 }
 
@@ -2121,12 +2208,20 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     }
 }
 
+@media screen and (max-width:1200px) {
+    .contact-section {
+        grid-template-areas:    'info map';
+        grid-template-columns:  0.5fr 0.5fr;
+        margin-inline: 2rem;
+    }
+}
+
 @media screen and (max-width:991px) {
     .contact-section {
         grid-template-areas:    'info' 
                                 'map';
         grid-template-columns:  1fr;
-        margin-inline: 2rem;
+        margin-inline: 1rem;
     }
 
 }
@@ -2166,7 +2261,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
    }
    
    .lm-button.learn-more {
-    width: 18rem;
+    width: clamp(2rem, 18rem, 100%);
     height: auto;
    }
    
@@ -2214,7 +2309,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     top: -0.24rem;
    }
    
-   .lm-button.learn-more .button-text a {
+   .lm-button.learn-more .button-text p {
     transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: absolute;
     top: 0;
@@ -2222,7 +2317,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     right: 0;
     bottom: 0;
     padding: 0.75rem 0;
-    /*margin: 0 0 0 1.85rem;*/
+    margin: 0 0 0 1.85rem;
     margin-inline: 4rem;
     color: #282936;
     font-weight: 700;
@@ -2241,7 +2336,7 @@ html #process, #material, #galleri, #material-plasma, #galleri-plasma, #process-
     transform: translate(1rem, 0);
    }
    
-   .lm-button:hover .button-text a {
+   .lm-button:hover .button-text p {
     color: #fff;
    }
 
@@ -2308,3 +2403,6 @@ model-viewer {
     transition: var(--all-cb-two);
 }
 /* ---- End of machine lists ---- */
+
+
+
